--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 kfserving~=0.3.0.1
 numpy==1.21.3
-tensorflow==2.7.0
 tornado~=6.2
 requests~=2.28.1
 cloudevents~=1.8.0
-bdilab-detect==0.1.0.dev1
-alibi-detect
+tensorflow==2.7.0
+bdilab-detect==0.2.6.dev
+alibi-detect~=0.9.0
+protobuf==3.19.5
